# print_shtrih-m

./: .env.example  .gitignore  README.md  create_test_data.py  egais_cheque_example.xml  invoice.pyw  pyproject.toml  requirements.txt  srv.py
api/models/: __init__.py  area.py  category.py  check_log.py  egais_log.py  product.py  seat.py  user.py
client/: .bunfig.toml  .gitignore  README.md  biome.json  index.html  package.json  svelte.config.js  tailwind.config.js  vite.config.js
client/src/: App.svelte  App.vue  app.css  main.js
client/src/api/: index.js
client/src/components/: CheckForm.svelte  CheckForm.vue  EgaisForm.svelte  EgaisForm.vue  EgaisXmlUploadForm.vue  KktInfo.svelte  KktInfo.vue  LoginForm.svelte  LoginForm.vue  Logo.svelte  Logo.vue  LogsView.svelte  LogsView.vue  ProductsView.svelte  ProductsView.vue  StatsView.svelte  StatsView.vue  UsersView.svelte  UsersView.vue
client/src/lib/: api.js  stores.js
mobile-client-server/: README.md  pubspec.yaml
mobile-client-server/android/app/: build.gradle
mobile-client-server/ios/Runner.xcodeproj/: project.pbxproj
mobile-client-server/lib/: main.dart
mobile-client-server/lib/models/: product.dart
mobile-client-server/lib/screens/: login_screen.dart  products_screen.dart
mobile-client-server/lib/services/: api_service.dart  auth_service.dart
mobile-client-server/linux/: CMakeLists.txt
mobile-client-server/macos/Runner.xcodeproj/: project.pbxproj
mobile-client-server/macos/Runner/Configs/: AppInfo.xcconfig
mobile-client-server/windows/runner/: Runner.rc
scheme/: ChequeV3.xsd
(+1 files in other folders)
