[project]
name = "print-shtrih-m"
version = "0.1.0"
description = ""
authors = [
    {name = "Stanislav Somov",email = "goofma@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tortoise-orm[asyncpg] (>=0.25.1,<0.26.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "lxml (>=6.0.1,<7.0.0)",
    "python-escpos (>=3.1,<4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
